--- a/src/scss/pages/_categories.scss
+++ b/src/scss/pages/_categories.scss
@@ -14,6 +14,7 @@
       background: #000;
       overflow: hidden;
       cursor: pointer;
+      text-align: center;
 
       img {
         width: 100%;
