single category, product overview

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,7 +19,8 @@
 @import './pages/footer';
 
 // Import pages
-@import './pages/product-overview';
 @import './pages/cart';
 @import './pages/likes';
 @import './pages/login';
+@import './pages/product-overview';
+@import './pages/single-category';
