--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -1,7 +1,8 @@
 // Login page
 
 .login {
-  background: url('../../img/login.jpg') no-repeat center center/cover;
+  background: url('https://images.pexels.com/photos/331990/pexels-photo-331990.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260')
+    no-repeat center center/cover;
   width: 100%;
   height: 100vh;
   position: fixed;
