--- a/src/scss/pages/_products.scss
+++ b/src/scss/pages/_products.scss
@@ -5,56 +5,76 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1em;
-    // margin: 0 auto;
-    justify-items: center;
-    // max-width: 100vw !important;
+    // justify-items: center;
 
-    &__item {
-      @include border-sm;
-      @include shadow-sm;
-      padding: 2rem 1rem;
-      background: #fff;
-      border-radius: $radius;
-      text-align: center;
-      position: relative;
-      width: 100%;
-
+    .product-card {
       img {
-        width: 200px;
         height: 200px;
-        z-index: -1;
-        transition: $transition;
       }
+    }
+  }
+}
 
-      &__btn {
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
+.product-card {
+  background: #fff;
+  border-radius: $radius;
+  padding: 2rem 1rem;
+  position: relative;
+  text-align: center;
+  @include shadow-sm;
+  @include border-sm;
 
-        button {
-          transition: $transition;
+  h4 {
+    color: $primary;
+    text-align: center;
+    opacity: 0;
+    z-index: 3;
+    transition: $transition;
+    @include absolute-center;
+  }
 
-          svg {
-            font-size: $fntS-5;
-            color: $primary;
-          }
+  img {
+    width: 90%;
+    height: 300px;
+    transition: $transition;
+    z-index: -1;
+  }
 
-          &:hover {
-            transform: scale(1.2);
+  &:hover {
+    h4 {
+      opacity: 1;
+    }
 
-            svg {
-              color: $primary;
-            }
-          }
-        }
+    img {
+      transform: scale(1.1);
+      opacity: 0.5;
+    }
+  }
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    margin-top: 1rem;
+
+    button {
+      transition: $transition;
+      svg {
+        font-weight: bold;
+        font-size: $fntS-5;
       }
 
       &:hover {
-        img {
-          transform: scale(1.1);
-          opacity: 0.5;
-        }
+        transform: scale(1.3);
       }
+    }
+  }
+}
+
+@media screen and (max-width: $md) {
+  .product-card {
+    img {
+      width: 65%;
     }
   }
 }
