--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -26,8 +26,13 @@ $clr-grey-9: hsl(232, 17%, 85%);
 // Secondary color
 $clr-grey-10: hsl(232, 17%, 95%);
 $clr-grey-11: hsl(232, 20%, 95%);
+// Add to wishlist bg
+$clr-red-1: #e63946;
+// Add to cart bg
+$clr-dark-blue: #0077b6;
 
 // Breakpoints
+$xxxl: 1550px;
 $xxl: 1400px;
 $xl: 1200px;
 $lg: 992px;
