--- a/src/scss/pages/_products.scss
+++ b/src/scss/pages/_products.scss
@@ -1,5 +1,3 @@
-// Products
-
 .products {
   &-content {
     display: grid;
@@ -57,7 +55,8 @@
     gap: 1em;
     margin-top: 1rem;
 
-    button {
+    button,
+    a {
       transition: $transition;
       svg {
         font-weight: bold;
@@ -85,4 +84,5 @@
   height: 100%;
   display: block;
   margin: 0 auto;
+  z-index: 10;
 }
