modal working, need to diasble scrolling

--- a/src/scss/pages/_product-overview.scss
+++ b/src/scss/pages/_product-overview.scss
@@ -41,7 +41,7 @@
           height: 100%;
           background: $primary;
           border-radius: 50%;
-          z-index: 1;
+          // z-index: 1;
         }
       }
 
