--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -118,6 +118,43 @@ section {
   transition: $transition;
 }
 
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background: $secondary;
+  padding: 2rem;
+  text-align: center;
+  text-transform: capitalize;
+  z-index: 2;
+  border-radius: $radius;
+
+  & > a {
+    display: block;
+    width: 50%;
+    color: $primary;
+    border: $border-size solid $primary;
+    margin: 1rem auto;
+
+    &:hover {
+      background: $primary;
+      color: #fff;
+    }
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(#000, 0.7);
+  z-index: 1;
+}
+
 @media screen and (max-width: $xl) {
   // section {
   //   padding: 2.5rem 0.75rem;
