--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -47,11 +47,14 @@ $fntS-4: 1rem;
 $fntS-5: 1.3rem;
 $fntS-6: 2.5rem;
 
+// Radius
+$radius: 20px;
+$radius-sm: 10px;
+
 // Theme
 $primary: $clr-blue-5;
 $secondary: $clr-grey-10;
 $transition: all 0.3s ease-in-out;
 $max-width: 1250px;
 $spacing: 0.1rem;
-$radius: 20px;
 $border-size: 2px;
