--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -13,6 +13,36 @@
   box-sizing: border-box;
 }
 
+html {
+  // Custom scrollbar
+  &::-webkit-scrollbar {
+    width: 1.4vw;
+    transition: $transition;
+
+    &-thumb,
+    &-track {
+      transition: $transition;
+    }
+
+    &-thumb {
+      background: rgba($primary, 0.5);
+      border: 2px solid $clr-grey-9;
+      border-radius: $radius;
+
+      &:hover {
+        background: $primary;
+      }
+    }
+
+    &-track {
+      background: rgba($clr-grey-9, 0.5);
+      &:hover {
+        background: $clr-grey-9;
+      }
+    }
+  }
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   font-size: $fntS-4;
