--- a/src/scss/pages/_tesitimonials.scss
+++ b/src/scss/pages/_tesitimonials.scss
@@ -49,7 +49,7 @@
         align-items: center;
         gap: 1rem;
         background: $primary;
-        border-radius: 0 0 $radius $radius;
+        border-radius: 0 0 $radius-sm $radius-sm;
         color: #fff;
         padding: 1rem 2rem;
         text-transform: capitalize;
