--- a/src/scss/components/_mixins.scss
+++ b/src/scss/components/_mixins.scss
@@ -47,6 +47,7 @@
   &:focus {
     border: $border-size $primary solid;
     color: $primary;
+    outline: none;
 
     &::placeholder {
       color: $primary;
