--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -3,12 +3,12 @@
 .login {
   background: url('https://images.pexels.com/photos/331990/pexels-photo-331990.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260')
     no-repeat center center/cover;
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
+  // width: 100%;
+  // height: 100vh;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // z-index: -1;
 
   &-form {
     background: rgba($secondary, 0.8);
