--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -92,7 +92,7 @@ input {
   border: none;
   padding: 10px;
   // outline: none;
-  border-radius: $radius;
+  border-radius: $radius-sm;
 }
 
 @media screen and (min-width: $lg) {
