--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -61,6 +61,11 @@
         background: $primary;
         width: 100%;
         margin-bottom: 2rem;
+
+        &:hover,
+        &:focus {
+          outline: $border-size solid #fff;
+        }
       }
 
       small {
@@ -71,7 +76,7 @@
 
     & > div {
       background: $clr-grey-8;
-
+      margin: auto 0;
       width: 50%;
       padding: 2rem;
     }
