empty wishlist and cart display

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,7 +20,7 @@
 
 // Import pages
 @import './pages/cart';
-@import './pages/likes';
+@import './pages/wishlist';
 @import './pages/login';
 @import './pages/product-overview';
 @import './pages/single-category';
