--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -71,3 +71,17 @@
     transform: scale(1.1);
   }
 }
+
+.btn-empty {
+  display: block;
+  background: $primary;
+  margin: 2rem auto 0 auto;
+  color: #fff;
+  border: $border-size solid transparent;
+
+  &:hover {
+    background: $clr-grey-8;
+    border: $border-size solid $primary;
+    color: $primary;
+  }
+}
