--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -85,3 +85,20 @@
     color: $primary;
   }
 }
+
+.btn-scrollTop {
+  background: $primary;
+  position: fixed;
+  right: -50px;
+  bottom: 50px;
+  z-index: 100000;
+  padding: 1.2rem;
+
+  svg {
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
