--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -74,15 +74,15 @@
 
 .btn-empty {
   display: block;
-  background: $primary;
+  background: #f4f4f4;
   margin: 2rem auto 0 auto;
-  color: #fff;
+  color: $primary;
   border: $border-size solid transparent;
 
   &:hover {
-    background: $clr-grey-8;
-    border: $border-size solid $primary;
-    color: $primary;
+    border: $border-size solid #fff;
+    color: #fff;
+    background: transparent;
   }
 }
 
