--- a/src/scss/pages/_wishlist.scss
+++ b/src/scss/pages/_wishlist.scss
@@ -1,21 +1,49 @@
 // wishlist and empty wishlist/cart
 
+.wishlist {
+  &-content {
+    display: grid;
+    grid-template-columns: repeat(5, minmax(250px, 1fr));
+    gap: 1em;
+
+    article {
+      padding: 2rem 1rem;
+      img {
+        height: 180px;
+        width: 50%;
+      }
+    }
+  }
+}
+
+// Styling for empty wishlist/cart image
 .emptySelected {
-  background: $clr-grey-8;
+  // background: $clr-grey-8;
   width: 85%;
   margin: 3rem auto;
   text-align: center;
   border-radius: $radius;
   text-transform: capitalize;
+  @include primary-gradient;
   @include shadow-sm;
   @include border-sm;
 
   img {
     width: 50%;
+    height: 200px;
     margin-top: 1rem;
   }
 
   h3 {
     color: #fff;
+  }
+}
+
+@media screen and (min-width: $lg) {
+  .emptySelected {
+    width: 65%;
+    img {
+      height: 400px;
+    }
   }
 }
