--- a/src/scss/pages/_wishlist.scss
+++ b/src/scss/pages/_wishlist.scss
@@ -1,9 +1,13 @@
 // wishlist and empty wishlist/cart
 
 .wishlist {
+  h3 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
   &-content {
     display: grid;
-    grid-template-columns: repeat(5, minmax(250px, 1fr));
+    grid-template-columns: 1fr;
     gap: 1em;
 
     article {
@@ -39,7 +43,20 @@
   }
 }
 
-@media screen and (min-width: $lg) {
+@media screen and (min-width: $md) {
+  .wishlist {
+    &-content {
+      grid-template-columns: repeat(2, minmax(250px, 1fr));
+    }
+  }
+}
+@media screen and (min-width: $xl) {
+  .wishlist {
+    &-content {
+      grid-template-columns: repeat(4, minmax(250px, 1fr));
+    }
+  }
+
   .emptySelected {
     width: 65%;
     img {
