--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -32,11 +32,10 @@
   }
 }
 
-.login-content-error {
+.popup-error {
   color: $clr-red-1;
   margin: 0.2rem 0;
   padding: 5px;
-  background: #f4f4f4;
   text-align: left !important;
   border-radius: $radius-sm;
 }
