--- a/src/scss/pages/_single-category.scss
+++ b/src/scss/pages/_single-category.scss
@@ -3,7 +3,7 @@
 .cgry-products {
   &-content {
     display: grid;
-    grid-template-columns: repeat(5, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1em;
     justify-content: center;
 
