--- a/src/scss/pages/_receipt.scss
+++ b/src/scss/pages/_receipt.scss
@@ -7,6 +7,11 @@
     background: #fff;
     // border-radius: $radius-sm;
 
+    p,
+    tr {
+      font-size: $fntS-3;
+    }
+
     h3 {
       margin-bottom: 1rem;
     }
@@ -91,6 +96,44 @@
             font-size: $fntS-5;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $md) {
+  .receipt-content {
+    h2 {
+      font-size: $fntS-4;
+    }
+    &__bill-from article {
+      padding: 1rem;
+    }
+    &__bill-to {
+      padding: 1rem;
+    }
+    & > table {
+      tr {
+        td {
+          padding: 0.5rem 0;
+        }
+        th,
+        td {
+          text-align: center;
+          &:first-child {
+            padding-left: 1rem;
+          }
+
+          &:last-child {
+            padding-right: 1rem;
+          }
+        }
+      }
+    }
+    footer {
+      padding: 1rem;
+      table tr:last-child {
+        font-size: $fntS-4;
       }
     }
   }
