--- a/src/scss/pages/_receipt.scss
+++ b/src/scss/pages/_receipt.scss
@@ -41,6 +41,7 @@
       display: flex;
       justify-content: space-between;
       padding: 1rem 2rem;
+      text-transform: capitalize;
     }
 
     & > table {
@@ -70,6 +71,7 @@
           &:first-child {
             padding-left: 2rem;
             text-align: left;
+            width: 70%;
           }
 
           &:last-child {
