--- a/src/scss/pages/_navbar.scss
+++ b/src/scss/pages/_navbar.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 1rem 1.5rem;
   align-items: center;
   background: $secondary;
@@ -43,7 +43,7 @@
     a {
       margin-left: 1.5rem;
       color: #000;
-      font-size: $fntS-5;
+      font-size: 1.5rem;
       transition: $transition;
       position: relative;
 
@@ -74,35 +74,15 @@
   transition: $transition;
 }
 
-@media screen and (max-width: $lg) {
+@media screen and (max-width: $md) {
   .navbar {
-    &-search {
-      input {
-        font-size: $fntS-2;
-      }
-    }
-
     &-links {
       a {
-        margin-left: 1.2rem;
+        // margin-left: 1.2rem;
         font-size: $fntS-4;
       }
       a.iconScale:hover {
         transform: scale(1.3);
-      }
-    }
-  }
-}
-
-@media screen and (max-width: $md) {
-  .navbar {
-    &-search {
-      width: 25%;
-    }
-
-    &-links {
-      a {
-        margin-left: 0.5rem;
       }
     }
   }
